# cxx-auto

./: .clang-tidy  .codecheckerignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  codechecker.json  crates.js  cxx-auto.code-workspace  help.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yaml
cxx/include/: cxx-auto.hxx
cxx/lib/: cmake.cxx
cxx_auto/: all.html  fn.process_artifacts.html  index.html  sidebar-items.js  struct.CxxAutoArtifactInfo.html  struct.CxxAutoEntry.html  type.BoxError.html  type.BoxResult.html
cxx_auto/ctypes/: index.html  sidebar-items.js  struct.c_char.html  struct.c_int.html  struct.c_long.html  struct.c_longlong.html  struct.c_off_t.html  struct.c_schar.html  struct.c_short.html  struct.c_time_t.html  struct.c_uchar.html  struct.c_uint.html  struct.c_ulong.html  struct.c_ulonglong.html  struct.c_ushort.html  struct.c_void.html
cxx_auto/cxx_auto_artifact_info/: struct.CxxAutoArtifactInfo.html
cxx_auto/cxx_auto_entry/: struct.CxxAutoEntry.html
cxx_auto/error/: type.BoxError.html  type.BoxResult.html
cxx_auto/ffi/ctypes/: struct.c_char.html  struct.c_int.html  struct.c_long.html  struct.c_longlong.html  struct.c_off_t.html  struct.c_schar.html  struct.c_short.html  struct.c_time_t.html  struct.c_uchar.html  struct.c_uint.html  struct.c_ulong.html  struct.c_ulonglong.html  struct.c_ushort.html  struct.c_void.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/cxx/cxx_vector/: trait.VectorElement.js
implementors/cxx/extern_type/: trait.ExternType.js
implementors/cxx/unique_ptr/: trait.UniquePtrTarget.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
src/: cxx_abi_artifact_info.rs  cxx_abi_entry.rs  cxx_auto_artifact_info.rs  cxx_auto_entry.rs  error.rs  lib.rs  processing.rs
src/cxx_auto/: cxx_auto_artifact_info.rs.html  cxx_auto_entry.rs.html  error.rs.html  lib.rs.html  processing.rs.html
src/cxx_auto/ffi/: ctypes.rs.html
src/ffi/: ctypes.rs
xtask/: Cargo.toml
xtask/src/: main.rs
